[gd_scene load_steps=2 format=3 uid="uid://mini_enemy_panel_scene"]

[ext_resource type="Script" path="res://scripts/combat/components/MiniEnemyPanel.gd" id="1_script"]

[node name="MiniEnemyPanel" type="Panel"]
custom_minimum_size = Vector2(55, 50)
offset_right = 55.0
offset_bottom = 50.0
z_index = 20
mouse_filter = 0
script = ExtResource("1_script")

[node name="IconLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 17.5
offset_top = 2.0
offset_right = 37.5
offset_bottom = 22.0
mouse_filter = 2
theme_override_font_sizes/font_size = 16
text = "üë§"

[node name="HPBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 22.5
offset_right = 52.0
offset_bottom = 28.5
mouse_filter = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="HPFill" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 22.5
offset_right = 52.0
offset_bottom = 28.5
mouse_filter = 2
color = Color(0.2, 0.85, 0.2, 1)

[node name="HPText" type="Label" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 55.0
offset_bottom = 44.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 9
text = "100/100"
horizontal_alignment = 1

[node name="HexLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 39.0
offset_right = 55.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.8, 0.3, 1, 1)
theme_override_font_sizes/font_size = 9
text = "‚ò†Ô∏è0"
horizontal_alignment = 1


